# ganav_ros2

./: README.md  run_inference_engine.py
traversability_ws/install/: local_setup.sh  setup.sh
traversability_ws/install/semantic_segmentation_ros2/lib/semantic_segmentation_ros2/: inference_node
traversability_ws/install/semantic_segmentation_ros2/share/semantic_segmentation_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
traversability_ws/src/semantic_segmentation_ros2/: package.xml  setup.cfg
traversability_ws/src/semantic_segmentation_ros2/trained_model/: ganav_group6_rugd.py
