<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_segmentation_ros2</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for semantic segmentation inference.</description>
  <maintainer email="labkubota@todo.todo">labkubota</maintainer>
  <license>Apache-2.0</license>

  <!-- 実行に必要な依存関係 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- テストに必要な依存関係 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
